Name:                hoauth2
-- http://wiki.haskell.org/Package_versioning_policy
Version:             1.5.1

Synopsis:            Haskell OAuth2 authentication client

Description: Haskell OAuth2 authentication client. Tested with the following services:
             .
             * Google: <https://developers.google.com/accounts/docs/OAuth2WebServer>
             .
             * Github: <http://developer.github.com/v3/oauth/>
             .
             * Facebook: <http://developers.facebook.com/docs/facebook-login/>
             .
             * Fitbit: <http://dev.fitbit.com/docs/oauth2/>
             .
             * StackExchange: <https://api.stackexchange.com/docs/authentication>
             .
             * DropBox: <https://www.dropbox.com/developers/reference/oauth-guide>
             .
             * Weibo: <http://open.weibo.com/wiki/Oauth2>
             .
             * Douban: <http://developers.douban.com/wiki/?title=oauth2>

Homepage:            https://github.com/freizl/hoauth2
License:             BSD3
License-file:        LICENSE
Author:              Haisheng Wu
Maintainer:          Haisheng Wu <freizl@gmail.com>
Copyright:           Haisheng Wu
Category:            Network
Build-type:          Simple
stability:           Beta
tested-with:         GHC <= 8.0.2

Extra-source-files: README.md
                    example/Keys.hs.sample
                    example/Google/test.hs
                    example/Weibo/test.hs
                    example/Github/test.hs
                    example/Facebook/test.hs
                    example/Fitbit/test.hs
                    example/Douban/test.hs

Cabal-version:       >=1.10

Source-Repository head
  Type:     git
  Location: git://github.com/freizl/hoauth2.git

Flag test
  Description: Build the executables
  Default: False

Library
  hs-source-dirs:   src
  default-language: Haskell2010
  Exposed-modules: Network.OAuth.OAuth2.HttpClient
                   Network.OAuth.OAuth2.Internal
                   Network.OAuth.OAuth2
                   Network.OAuth.OAuth2.TokenRequest
                   Network.OAuth.OAuth2.AuthorizationRequest

  Build-Depends: base                 >= 4     && < 5,
                 text                 >= 0.11  && < 1.3,
                 bytestring           >= 0.9   && < 0.11,
                 http-conduit         >= 2.1   && < 2.3,
                 http-types           >= 0.9   && < 0.11,
                 aeson                >= 0.11  && < 1.3,
                 unordered-containers >= 0.2.5,
                 uri-bytestring       >= 0.2.3.1 && < 0.4,
                 uri-bytestring-aeson >= 0.1   && < 0.2,
                 microlens            >= 0.4.0 && < 0.5,
                 exceptions           >= 0.8.3 && < 0.9

  if impl(ghc >= 6.12.0)
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-unused-do-bind
  else
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

Executable test-weibo
  if flag(test)
    Buildable: True
  else
    Buildable: False

  main-is:             Weibo/test.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base              >= 4.5    && < 5,
                       http-types        >= 0.9    && < 0.11,
                       http-conduit      >= 2.1    && < 2.3,
                       text              >= 0.11   && < 1.3,
                       bytestring        >= 0.9    && < 0.11,
                       uri-bytestring    >= 0.2.3.1 && < 0.4,
                       aeson             >= 0.11   && < 1.3,
                       hoauth2

  if impl(ghc >= 6.12.0)
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-unused-do-bind
  else
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields


Executable test-google
  if flag(test)
    Buildable: True
  else
    Buildable: False

  main-is:             Google/test.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base              >= 4.5    && < 5,
                       http-types        >= 0.9    && < 0.11,
                       http-conduit      >= 2.1    && < 2.3,
                       text              >= 0.11   && < 1.3,
                       bytestring        >= 0.9    && < 0.11,
                       uri-bytestring    >= 0.2.3.1 && < 0.4,
                       aeson             >= 0.11   && < 1.3,
                       hoauth2

  if impl(ghc >= 6.12.0)
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-unused-do-bind
  else
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields


Executable test-github
  if flag(test)
    Buildable: True
  else
    Buildable: False

  main-is:             Github/test.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base              >= 4.5    && < 5,
                       http-types        >= 0.9    && < 0.11,
                       http-conduit      >= 2.1    && < 2.3,
                       text              >= 0.11   && < 1.3,
                       bytestring        >= 0.9    && < 0.11,
                       uri-bytestring    >= 0.2.3.1 && < 0.4,
                       aeson             >= 0.11   && < 1.3,
                       hoauth2

  if impl(ghc >= 6.12.0)
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-unused-do-bind
  else
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

Executable test-douban
  if flag(test)
    Buildable: True
  else
    Buildable: False

  main-is:             Douban/test.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base              >= 4.5    && < 5,
                       http-types        >= 0.9    && < 0.11,
                       http-conduit      >= 2.1    && < 2.3,
                       text              >= 0.11   && < 1.3,
                       bytestring        >= 0.9    && < 0.11,
                       uri-bytestring    >= 0.2.3.1 && < 0.4,
                       aeson             >= 0.11   && < 1.3,
                       hoauth2

  if impl(ghc >= 6.12.0)
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-unused-do-bind
  else
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

Executable test-facebook
  if flag(test)
    Buildable: True
  else
    Buildable: False

  main-is:             Facebook/test.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base              >= 4.5    && < 5,
                       http-types        >= 0.9    && < 0.11,
                       http-conduit      >= 2.1    && < 2.3,
                       text              >= 0.11   && < 1.3,
                       bytestring        >= 0.9    && < 0.11,
                       uri-bytestring    >= 0.2.3.1 && < 0.4,
                       aeson             >= 0.11   && < 1.3,
                       hoauth2

  if impl(ghc >= 6.12.0)
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-unused-do-bind
  else
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

Executable test-fitbit
  if flag(test)
    Buildable: True
  else
    Buildable: False

  main-is:             Fitbit/test.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base              >= 4.5    && < 5,
                       text              >= 0.11   && < 1.3,
                       bytestring        >= 0.9    && < 0.11,
                       uri-bytestring    >= 0.2.3.1 && < 0.4,
                       http-conduit      >= 2.1    && < 2.3,
                       http-types        >= 0.9    && < 0.11,
                       wai               >= 3.2    && < 3.3,
                       warp              >= 3.2    && < 3.3,
                       containers        >= 0.4    && < 0.6,
                       aeson             >= 0.11   && < 1.3,
                       hoauth2


  if impl(ghc >= 6.12.0)
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-unused-do-bind -fno-warn-orphans
  else
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

Executable test-stackexchange
  if flag(test)
    Buildable: True
  else
    Buildable: False

  main-is:             StackExchange/test.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base              >= 4.5    && < 5,
                       http-types        >= 0.9    && < 0.11,
                       http-conduit      >= 2.1    && < 2.3,
                       text              >= 0.11   && < 1.3,
                       bytestring        >= 0.9    && < 0.11,
                       uri-bytestring    >= 0.2.3.1 && < 0.4,
                       aeson             >= 0.11   && < 1.3,
                       hoauth2

  if impl(ghc >= 6.12.0)
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-unused-do-bind
  else
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

Executable test-dropbox
  if flag(test)
    Buildable: True
  else
    Buildable: False

  main-is:             Dropbox/test.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base              >= 4.5    && < 5,
                       http-types        >= 0.9    && < 0.11,
                       http-conduit      >= 2.1    && < 2.3,
                       text              >= 0.11   && < 1.3,
                       bytestring        >= 0.9    && < 0.11,
                       uri-bytestring    >= 0.2.3.1 && < 0.4,
                       aeson             >= 0.11   && < 1.3,
                       hoauth2

  if impl(ghc >= 6.12.0)
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-unused-do-bind
  else
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

Executable test-okta
  if flag(test)
    Buildable: True
  else
    Buildable: False

  main-is:             Okta/test.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base              >= 4.5    && < 5,
                       http-types        >= 0.9    && < 0.11,
                       http-conduit      >= 2.1    && < 2.3,
                       text              >= 0.11   && < 1.3,
                       bytestring        >= 0.9    && < 0.11,
                       uri-bytestring    >= 0.2.3.1 && < 0.4,
                       aeson             >= 0.11   && < 1.3,
                       hoauth2

  if impl(ghc >= 6.12.0)
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-unused-do-bind
  else
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
