Name:                hoauth2
-- http://wiki.haskell.org/Package_versioning_policy
Version:             1.7.2

Synopsis:            Haskell OAuth2 authentication client

Description: Haskell OAuth2 authentication client. Tested with the following services:
             .
             * Google: <https://developers.google.com/accounts/docs/OAuth2WebServer>
             .
             * Github: <http://developer.github.com/v3/oauth/>
             .
             * Facebook: <http://developers.facebook.com/docs/facebook-login/>
             .
             * Fitbit: <http://dev.fitbit.com/docs/oauth2/>
             .
             * StackExchange: <https://api.stackexchange.com/docs/authentication>
             .
             * DropBox: <https://www.dropbox.com/developers/reference/oauth-guide>
             .
             * Weibo: <http://open.weibo.com/wiki/Oauth2>
             .
             * Douban: <http://developers.douban.com/wiki/?title=oauth2>

Homepage:            https://github.com/freizl/hoauth2
License:             BSD3
License-file:        LICENSE
Author:              Haisheng Wu
Maintainer:          Haisheng Wu <freizl@gmail.com>
Copyright:           Haisheng Wu
Category:            Network
Build-type:          Simple
stability:           Beta
tested-with:         GHC <= 8.0.2

Extra-source-files: README.md
                    example/Keys.hs.sample
                    example/IDP/Google.hs
                    example/IDP/Weibo.hs
                    example/IDP/Github.hs
                    example/IDP/Facebook.hs
                    example/IDP/Fitbit.hs
                    example/IDP/Douban.hs
                    example/IDP/Linkedin.hs
                    example/IDP.hs
                    example/App.hs
                    example/Session.hs
                    example/Types.hs
                    example/Utils.hs
                    example/Views.hs
                    example/main.hs
                    example/README.md
                    example/templates/index.mustache
                    example/assets/main.css

Cabal-version:       >=1.10

Source-Repository head
  Type:     git
  Location: git://github.com/freizl/hoauth2.git

Flag test
  Description: Build the executables
  Default: False

Library
  hs-source-dirs:   src
  default-language: Haskell2010
  Exposed-modules: Network.OAuth.OAuth2.HttpClient
                   Network.OAuth.OAuth2.Internal
                   Network.OAuth.OAuth2
                   Network.OAuth.OAuth2.TokenRequest
                   Network.OAuth.OAuth2.AuthorizationRequest

  Build-Depends: base >= 4.7 && < 5,
                 text,
                 bytestring,
                 http-conduit,
                 http-types,
                 aeson,
                 unordered-containers,
                 uri-bytestring,
                 uri-bytestring-aeson,
                 microlens,
                 exceptions

  if impl(ghc >= 6.12.0)
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-unused-do-bind
  else
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

Executable demo-server
  if flag(test)
    Buildable: True
  else
    Buildable: False

  main-is:             main.hs
  other-modules:       IDP,
                       App
                       IDP.Douban
                       IDP.Dropbox
                       IDP.Facebook
                       IDP.Fitbit
                       IDP.Github
                       IDP.Google
                       IDP.Okta
                       IDP.StackExchange
                       IDP.Weibo
                       IDP.Linkedin
                       Keys
                       Session
                       Types
                       Utils
                       Views
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text,
                       bytestring,
                       uri-bytestring,
                       http-conduit,
                       http-types,
                       wai,
                       warp,
                       containers,
                       aeson,
                       microlens,
                       unordered-containers,
                       wai-extra,
                       wai-middleware-static,
                       mustache,
                       mtl,
                       scotty,
                       binary,
                       parsec,
                       hashable,
                       hoauth2

  if impl(ghc >= 6.12.0)
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-unused-do-bind -fno-warn-orphans
  else
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
