Cabal-version: 2.4
Name:                hoauth2
-- http://wiki.haskell.org/Package_versioning_policy
Version:             1.9.1

Synopsis:            Haskell OAuth2 authentication client

Description: Haskell OAuth2 authentication client. Tested with the following services:
             .
             * AzureAD: <https://docs.microsoft.com/en-us/azure/active-directory/develop/v1-protocols-oauth-code>
             .
             * Google: <https://developers.google.com/accounts/docs/OAuth2WebServer>
             .
             * Github: <http://developer.github.com/v3/oauth/>
             .
             * Facebook: <http://developers.facebook.com/docs/facebook-login/>
             .
             * Fitbit: <http://dev.fitbit.com/docs/oauth2/>
             .
             * StackExchange: <https://api.stackexchange.com/docs/authentication>
             .
             * DropBox: <https://www.dropbox.com/developers/reference/oauth-guide>
             .
             * Weibo: <http://open.weibo.com/wiki/Oauth2>
             .
             * Douban: <http://developers.douban.com/wiki/?title=oauth2>

Homepage:            https://github.com/freizl/hoauth2
License:             BSD-3-Clause
License-file:        LICENSE
Author:              Haisheng Wu
Maintainer:          Haisheng Wu <freizl@gmail.com>
Copyright:           Haisheng Wu
Category:            Network
Build-type:          Simple
Stability:           Beta
Tested-With:         GHC <= 8.6.5

Extra-source-files: README.md
                    example/Keys.hs.sample
                    example/IDP/AzureAD.hs
                    example/IDP/Google.hs
                    example/IDP/Weibo.hs
                    example/IDP/Github.hs
                    example/IDP/Facebook.hs
                    example/IDP/Fitbit.hs
                    example/IDP/Douban.hs
                    example/IDP/Linkedin.hs
                    example/IDP.hs
                    example/App.hs
                    example/Session.hs
                    example/Types.hs
                    example/Utils.hs
                    example/Views.hs
                    example/main.hs
                    example/README.md
                    example/templates/index.mustache
                    example/assets/main.css

Source-Repository head
  Type:     git
  Location: git://github.com/freizl/hoauth2.git

Flag test
  Description: Build the executables
  Default: False

Library
  hs-source-dirs:   src
  default-language: Haskell2010
  Exposed-modules: Network.OAuth.OAuth2.HttpClient
                   Network.OAuth.OAuth2.Internal
                   Network.OAuth.OAuth2
                   Network.OAuth.OAuth2.TokenRequest
                   Network.OAuth.OAuth2.AuthorizationRequest

  Build-Depends: base                 >= 4     && < 5,
                 binary               >= 0.8.3.0 && < 0.8.8,
                 text                 >= 0.11  && < 1.3,
                 bytestring           >= 0.9   && < 0.11,
                 http-conduit         >= 2.1   && < 2.4,
                 http-types           >= 0.11   && < 0.13,
                 aeson                >= 1.3.0.0 && < 1.5,
                 unordered-containers >= 0.2.5,
                 uri-bytestring       >= 0.2.3.1 && < 0.4,
                 uri-bytestring-aeson >= 0.1   && < 0.2,
                 microlens            >= 0.4.0 && < 0.5,
                 exceptions           >= 0.8.3 && < 0.11

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-unused-do-bind

Executable demo-server
  if flag(test)
    Buildable: True
  else
    Buildable: False

  main-is:             main.hs
  other-modules:       IDP,
                       App
                       IDP.AzureAD
                       IDP.Douban
                       IDP.Dropbox
                       IDP.Facebook
                       IDP.Fitbit
                       IDP.Github
                       IDP.Google
                       IDP.Okta
                       IDP.StackExchange
                       IDP.Weibo
                       IDP.Linkedin
                       Keys
                       Session
                       Types
                       Utils
                       Views
  hs-source-dirs:      example
  default-language:    Haskell2010
  build-depends:       base              >= 4.5    && < 5,
                       text              >= 0.11   && < 1.3,
                       bytestring        >= 0.9    && < 0.11,
                       uri-bytestring    >= 0.2.3.1 && < 0.4,
                       http-conduit      >= 2.1    && < 2.4,
                       http-types        >= 0.11    && < 0.13,
                       wai               >= 3.2    && < 3.3,
                       warp              >= 3.2    && < 3.4,
                       containers        >= 0.4    && < 0.7,
                       aeson             >= 1.3.0.0 && < 1.5,
                       microlens            >= 0.4.0 && < 0.5,
                       unordered-containers >= 0.2.5,
                       wai-extra >= 3.0.21.0 && < 3.1,
                       wai-middleware-static >= 0.8.1 && < 0.8.4,
                       mustache >= 2.2.3 && < 2.4.0,
                       mtl >= 2.2.1 && < 2.3,
                       scotty >= 0.10.0 && < 0.12,
                       binary >= 0.8.3.0 && < 0.8.8,
                       parsec >= 3.1.11 && < 3.2.0 ,
                       hashable >= 1.2.6 && < 1.4.0,
                       hoauth2

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-unused-do-bind -fno-warn-orphans
