cabal-version:      2.4
name:               hoauth2-demo
version:            1.6.0
synopsis:           hoauth2 demo application
description:
  Demo application to test oauth2 flow with many providers using hoauth2

homepage:           https://github.com/freizl/hoauth2
license:            MIT
license-file:       LICENSE
author:             Haisheng Wu
maintainer:         Haisheng Wu <freizl@gmail.com>
copyright:          Haisheng Wu
category:           Network
build-type:         Simple
stability:          Beta
tested-with:        GHC <=9.2.2
extra-source-files:
  README.org
  sample.env.json

data-files:
  public/assets/main.css
  public/templates/index.mustache

source-repository head
  type:     git
  location: git://github.com/freizl/hoauth2.git

executable hoauth2-demo
  main-is:            Main.hs
  autogen-modules:    Paths_hoauth2_demo
  other-modules:
    App
    Env
    Idp
    Paths_hoauth2_demo
    Session
    Types
    Utils
    Views

  default-extensions:
    DataKinds
    DeriveGeneric
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    OverloadedStrings
    RecordWildCards
    TypeApplications
    TypeFamilies

  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:
    , aeson                  >=2.0    && <2.2
    , base                   >=4.5    && <5
    , bytestring             >=0.9    && <0.12
    , containers             ^>=0.6
    , data-default           ^>=0.7
    , directory              ^>=1.3
    , hoauth2                >=2.7
    , hoauth2-providers      >=0.2
    , http-conduit           >=2.1    && <2.4
    , http-types             >=0.11   && <0.13
    , jose-jwt               >=0.9.4  && <0.10
    , microlens              ^>=0.4.0
    , mustache               >=2.2.3  && <2.5.0
    , parsec                 >=3.1.11 && <3.2.0
    , scotty                 >=0.10.0 && <0.13
    , text                   >=0.11   && <1.3
    , transformers           ^>=0.5
    , unordered-containers   >=0.2.5
    , uri-bytestring         >=0.2.3  && <0.4
    , wai                    ^>=3.2
    , wai-middleware-static  >=0.8.1  && <0.10.0
    , warp                   >=3.2    && <3.4

  ghc-options:
    -Wall -Wtabs -Wno-unused-do-bind -Wunused-packages -Wpartial-fields
    -Wwarnings-deprecations
