cabal-version:      2.4
name:               hoauth2-demo
version:            1.12.0
synopsis:           hoauth2 demo application
description:
  Demo application to test oauth2 flow with many providers using hoauth2

homepage:           https://github.com/freizl/hoauth2
license:            MIT
license-file:       LICENSE
author:             Haisheng Wu
maintainer:         Haisheng Wu <freizl@gmail.com>
copyright:          Haisheng Wu
category:           Network
build-type:         Simple
stability:          Beta
tested-with:        GHC <=9.6.1
extra-source-files:
  README.org
  sample.env.json

data-files:
  public/assets/main.css
  public/templates/index.mustache

source-repository head
  type:     git
  location: git://github.com/freizl/hoauth2.git

flag breakpoint
  description: Turn on breakpoint plugin
  manual:      True
  default:     False

executable hoauth2-demo
  main-is:            Main.hs
  autogen-modules:    Paths_hoauth2_demo
  other-modules:
    App
    Env
    Idp
    Paths_hoauth2_demo
    Session
    Types
    User
    Utils
    Views

  default-extensions:
    DataKinds
    DeriveGeneric
    DerivingStrategies
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    OverloadedStrings
    PolyKinds
    RecordWildCards
    TypeApplications

  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:
    , aeson                  >=2.0    && <2.3
    , base                   >=4.11   && <5
    , bytestring             >=0.9    && <0.13
    , containers             >=0.6    && <0.8
    , data-default           ^>=0.7
    , directory              ^>=1.3
    , hoauth2                >=2.9    && <2.15
    , hoauth2-providers      >=0.3    && <0.9
    , http-conduit           >=2.1    && <2.4
    , http-types             >=0.11   && <0.13
    , jose-jwt               >=0.10   && <0.11
    , mustache               >=2.2.3  && <2.5.0
    , parsec                 >=3.1.11 && <3.2.0
    , scotty                 >=0.10.0 && <0.13
    , text                   >=2.0    && <2.3
    , transformers           >=0.4    && <0.7
    , uri-bytestring         >=0.2.3  && <0.4
    , wai                    ^>=3.2
    , wai-middleware-static  >=0.8.1  && <0.10.0
    , warp                   >=3.2    && <3.4

  ghc-options:
    -Wall -Wextra -Wtabs -Wno-unused-do-bind -Wpartial-fields
    -Wunused-packages -Wwarnings-deprecations -Wwarn

  if flag(breakpoint)
    build-depends: breakpoint ^>=0.1.2
    ghc-options:   -fplugin=Debug.Breakpoint -plugin-package breakpoint

  if impl(ghc <9.4)
    ghc-options: -Wno-unticked-promoted-constructors
