cabal-version:      2.4
name:               hoauth2-example
version:            1.4.0
synopsis:           OAuth2 example
description:
  Tested with the following services:
  * Auth0: <https://auth0.com/docs/api>
  * AzureAD: <https://docs.microsoft.com/en-us/azure/active-directory/develop/v1-protocols-oauth-code>
  * DropBox: <https://www.dropbox.com/developers/reference/oauth-guide>
  * Facebook: <http://developers.facebook.com/docs/facebook-login/>
  * Fitbit: <http://dev.fitbit.com/docs/oauth2/>
  * Github: <http://developer.github.com/v3/oauth/>
  * Google: <https://developers.google.com/accounts/docs/OAuth2WebServer>
  * Okta: <https://developer.okta.com/docs/concepts/oauth-openid/>
  * Slack: <https://api.slack.com/legacy/oauth>
  * StackExchange: <https://api.stackexchange.com/docs/authentication>
  * Weibo: <http://open.weibo.com/wiki/Oauth2>

homepage:           https://github.com/freizl/hoauth2
license:            BSD-3-Clause
license-file:       LICENSE
author:             Haisheng Wu
maintainer:         Haisheng Wu <freizl@gmail.com>
copyright:          Haisheng Wu
category:           Network
build-type:         Simple
stability:          Beta
tested-with:        GHC <=9.2.2
extra-source-files:
  README.org
  sample.env.json

data-files:
  public/assets/main.css
  public/templates/index.mustache

source-repository head
  type:     git
  location: git://github.com/freizl/hoauth2.git

executable demo-server
  main-is:          main.hs
  other-modules:
    App
    IDP
    IDP.Auth0
    IDP.AzureAD
    IDP.Dropbox
    IDP.Facebook
    IDP.Fitbit
    IDP.Github
    IDP.Google
    IDP.Linkedin
    IDP.Okta
    IDP.Slack
    IDP.StackExchange
    IDP.Weibo
    IDP.ZOHO
    Paths_hoauth2_example
    Session
    Types
    Utils
    Views

  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , aeson                  >=2.0    && <2.2
    , base                   >=4.5    && <5
    , bytestring             >=0.9    && <0.12
    , containers             ^>=0.6
    , data-default           ^>=0.7
    , directory              ^>=1.3
    , hoauth2
    , http-conduit           >=2.1    && <2.4
    , http-types             >=0.11   && <0.13
    , microlens              ^>=0.4.0
    , mustache               >=2.2.3  && <2.5.0
    , parsec                 >=3.1.11 && <3.2.0
    , scotty                 >=0.10.0 && <0.13
    , text                   >=0.11   && <1.3
    , transformers           ^>=0.5
    , unordered-containers   >=0.2.5
    , uri-bytestring         >=0.2.3  && <0.4
    , wai                    ^>=3.2
    , wai-middleware-static  >=0.8.1  && <0.10.0
    , warp                   >=3.2    && <3.4

  ghc-options:
    -Wall -Wtabs -Wno-unused-do-bind -Wunused-packages -Wpartial-fields
    -Wwarnings-deprecations
