cabal-version:      2.4
name:               hoauth2-providers-tutorial
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Haisheng Wu (M)
maintainer:         freizl@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:  HOAuth2ProvidersTutorial
  build-depends:
    , aeson              >=2.0      && <2.2
    , base               >=4.14 && < 5
    , bytestring         >=0.9      && <0.12
    , hoauth2            ^>=2.5
    , hoauth2-providers  ^>=0.1
    , http-conduit       >=2.1      && <2.4
    , http-types         >=0.11     && <0.13
    , scotty             >=0.10.0   && <0.13
    , text               >=0.11     && <1.3
    , containers
    , transformers       ^>=0.5
    , uri-bytestring     >=0.2.3    && <0.4
    , wai                ^>=3.2
    , warp               >=3.2      && <3.4

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wtabs -Wno-unused-do-bind -Wunused-packages -Wpartial-fields
    -Wwarnings-deprecations

executable hoauth2-providers-tutorial
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    base               >=4.14 && < 5
    , hoauth2-providers-tutorial

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -Wall -Wtabs -Wno-unused-do-bind -Wunused-packages -Wpartial-fields
    -Wwarnings-deprecations
