cabal-version: 2.4
name:          hoauth2-providers-tutorial
version:       0.1
synopsis:      tutorial for hoauth2-providers module
description:
  A tutorial that demostrates how to use hoauth2-providers package
  for OAuth2 Authorization Code flow.

license:       MIT
license-file:  LICENSE
author:        Haisheng Wu (M)
maintainer:    freizl@gmail.com
category:      Network

library
  exposed-modules:  HOAuth2ProvidersTutorial
  build-depends:
    , aeson              >=2.0    && <2.2
    , base               >=4.14   && <5
    , bytestring         >=0.9    && <0.12
    , containers
    , hoauth2            ^>=2.6
    , hoauth2-providers  ^>=0.1
    , http-conduit       >=2.1    && <2.4
    , http-types         >=0.11   && <0.13
    , scotty             >=0.10.0 && <0.13
    , text               >=0.11   && <1.3
    , transformers       ^>=0.5
    , uri-bytestring     >=0.2.3  && <0.4
    , wai                ^>=3.2
    , warp               >=3.2    && <3.4

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wtabs -Wno-unused-do-bind -Wunused-packages -Wpartial-fields
    -Wwarnings-deprecations

executable hoauth2-providers-tutorial
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base                        >=4.14 && <5
    , hoauth2-providers-tutorial

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -Wall -Wtabs -Wno-unused-do-bind -Wunused-packages -Wpartial-fields
    -Wwarnings-deprecations
