cabal-version: 2.4
name:          hoauth2-providers-tutorial
version:       0.8.0
synopsis:      tutorial for hoauth2-providers module
description:
  A tutorial that demostrates how to use hoauth2-providers package
  for OAuth2 Authorization Code flow.

license:       MIT
license-file:  LICENSE
author:        Haisheng Wu (M)
maintainer:    freizl@gmail.com
category:      Network
tested-with:   GHC <=9.6.1

library
  exposed-modules:  HOAuth2ProvidersTutorial
  build-depends:
    , base               >=4.11   && <5
    , bytestring         >=0.9    && <0.13
    , containers         >=0.6    && <0.8
    , hoauth2            >=2.9    && <2.15
    , hoauth2-providers  >=0.3    && <0.9
    , http-conduit       >=2.1    && <2.4
    , http-types         >=0.11   && <0.13
    , scotty             >=0.10.0 && <0.13
    , text               >=2.0    && <2.3
    , transformers       >=0.4    && <0.7
    , uri-bytestring     >=0.2.3  && <0.4

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wtabs -Wno-unused-do-bind -Wunused-packages -Wpartial-fields
    -Wwarnings-deprecations

  if impl(ghc <9.4)
    ghc-options: -Wno-unticked-promoted-constructors

executable hoauth2-providers-tutorial
  main-is:          Main.hs
  build-depends:
    , base                        >=4.11 && <5
    , hoauth2-providers-tutorial

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -Wall -Wtabs -Wno-unused-do-bind -Wunused-packages -Wpartial-fields
    -Wwarnings-deprecations
