cabal-version: 2.4
name:          hoauth2-providers
version:       0.2
synopsis:      OAuth2 Identity Providers
description:
  A list of Identity Providers base on hoauth2 Haskell OAuth2 binding

homepage:      https://github.com/freizl/hoauth2
license:       MIT
license-file:  LICENSE
author:        Haisheng Wu
maintainer:    Haisheng Wu <freizl@gmail.com>
copyright:     Haisheng Wu
category:      Network
build-type:    Simple
stability:     Beta
tested-with:   GHC <=9.2.2

-- extra-source-files:

source-repository head
  type:     git
  location: git://github.com/freizl/hoauth2.git

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveGeneric
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    OverloadedStrings
    RecordWildCards
    TypeApplications
    TypeFamilies

  -- other-modules:

  exposed-modules:
    Network.OAuth2.Provider.Auth0
    Network.OAuth2.Provider.AzureAD
    Network.OAuth2.Provider.Dropbox
    Network.OAuth2.Provider.Facebook
    Network.OAuth2.Provider.Fitbit
    Network.OAuth2.Provider.Github
    Network.OAuth2.Provider.Google
    Network.OAuth2.Provider.Linkedin
    Network.OAuth2.Provider.Okta
    Network.OAuth2.Provider.Slack
    Network.OAuth2.Provider.StackExchange
    Network.OAuth2.Provider.Twitter
    Network.OAuth2.Provider.Utils
    Network.OAuth2.Provider.Weibo
    Network.OAuth2.Provider.ZOHO
    Network.OIDC.WellKnown

  build-depends:
    , aeson                 >=2.0    && <2.2
    , base                  >=4.5    && <5
    , bytestring            >=0.9    && <0.12
    , containers            ^>=0.6
    , cryptonite            >=0.30   && <0.31
    , data-default          ^>=0.7
    , directory             ^>=1.3
    , hoauth2               >=2.7
    , HsOpenSSL             >=0.11   && <0.12
    , http-conduit          >=2.1    && <2.4
    , http-types            >=0.11   && <0.13
    , jose-jwt              >=0.9.4  && <0.10
    , mtl
    , parsec                >=3.1.11 && <3.2.0
    , text                  >=0.11   && <1.3
    , time                  >=1.12   && <1.13
    , transformers          ^>=0.5
    , unordered-containers  >=0.2.5
    , uri-bytestring        >=0.2.3  && <0.4

  ghc-options:
    -Wall -Wtabs -Wno-unused-do-bind -Wunused-packages -Wpartial-fields
    -Wwarnings-deprecations
